[gd_scene load_steps=22 format=3 uid="uid://b3vieuaijo4b"]

[ext_resource type="Texture2D" uid="uid://dhbv7e4bu2g1r" path="res://Player/skeleton spritesheet calciumtrice.png" id="1_mae20"]
[ext_resource type="Script" path="res://Player/player.gd" id="1_outwd"]
[ext_resource type="AudioStream" uid="uid://ctr8ielq1gsbs" path="res://Hazard/Mouse Yell.mp3" id="3_p8llt"]
[ext_resource type="AudioStream" uid="uid://dqxawq7snuy1f" path="res://Player/West Walk.mp3" id="4_girci"]
[ext_resource type="AudioStream" uid="uid://bhko5eit0oten" path="res://Player/East Walk.mp3" id="5_kcili"]
[ext_resource type="AudioStream" uid="uid://b8bjon0l0oapp" path="res://Player/South Walk.mp3" id="6_4b20f"]
[ext_resource type="AudioStream" uid="uid://beuenhicnxvif" path="res://Player/North Walk.mp3" id="7_veqck"]
[ext_resource type="Texture2D" uid="uid://ccnkxtfb1jvu3" path="res://Burger/Frame1.png" id="8_i71ks"]
[ext_resource type="Texture2D" uid="uid://bs57sy4flmiet" path="res://Burger/Bottom/BottomBun.png" id="9_7pnwy"]
[ext_resource type="Texture2D" uid="uid://cwylpm7ufyjva" path="res://Burger/WholeBurger/Burger2.png" id="9_xoqxb"]
[ext_resource type="Texture2D" uid="uid://kjevhp1j7qhs" path="res://Burger/WholeBurger/Burger3.png" id="10_vowjm"]
[ext_resource type="Texture2D" uid="uid://bjksen7k1si1h" path="res://Burger/WholeBurger/Burger4.png" id="11_4r7jv"]
[ext_resource type="Script" path="res://Burger/BurgerSprite.gd" id="12_y8rqf"]

[sub_resource type="Animation" id="Animation_2a6n7"]
resource_name = "Death"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [40, 41, 42, 43, 44, 45, 46, 47, 48, 49]
}

[sub_resource type="Animation" id="Animation_44dew"]
resource_name = "Idle"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}

[sub_resource type="Animation" id="Animation_de72b"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_v0nf1"]
resource_name = "Walk"
length = 0.600007
step = 0.0666667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333, 0.4, 0.466667, 0.533333, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [20, 21, 22, 23, 24, 25, 26, 27, 28, 29]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_216hc"]
_data = {
"Death": SubResource("Animation_2a6n7"),
"Idle": SubResource("Animation_44dew"),
"RESET": SubResource("Animation_de72b"),
"Walk": SubResource("Animation_v0nf1")
}

[sub_resource type="GDScript" id="GDScript_ettrk"]
script/source = "extends Sprite2D


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass
"

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_341a0"]
radius = 19.0
height = 128.0

[sub_resource type="SpriteFrames" id="SpriteFrames_i36t7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_i71ks")
}],
"loop": true,
"name": &"Step0",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_7pnwy")
}],
"loop": true,
"name": &"Step1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_xoqxb")
}],
"loop": true,
"name": &"Step2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_vowjm")
}],
"loop": true,
"name": &"Step3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_4r7jv")
}],
"loop": true,
"name": &"Step4",
"speed": 5.0
}]

[node name="Player" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_outwd")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_216hc")
}

[node name="CharacterSprite" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-1, 0)
scale = Vector2(15.8125, 13.2689)
texture = ExtResource("1_mae20")
hframes = 10
vframes = 5
script = SubResource("GDScript_ettrk")

[node name="Rat_Detector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rat_Detector"]
position = Vector2(0, 194)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_341a0")

[node name="FeetCollider" type="CollisionShape2D" parent="."]
position = Vector2(0, 194)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_341a0")

[node name="RatCollision" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_p8llt")

[node name="WestWalk" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_girci")

[node name="EastWalk" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_kcili")

[node name="SouthWalk" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_4b20f")

[node name="NorthWalk" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_veqck")

[node name="BurgerSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(-3, -285)
sprite_frames = SubResource("SpriteFrames_i36t7")
animation = &"Step1"
script = ExtResource("12_y8rqf")

[connection signal="burger_item_added" from="." to="CharacterSprite" method="_on_player_burger_item_added"]
[connection signal="burger_item_added" from="." to="BurgerSprite" method="_on_player_burger_item_added"]
[connection signal="body_entered" from="Rat_Detector" to="." method="_on_area_2d_body_entered"]
